fix: add box-sizing content-box to carousel dots to prevent border-box collapse

--- a/apps/cms-server/modules/openstad-blog-post-widget/views/widget.scss
+++ b/apps/cms-server/modules/openstad-blog-post-widget/views/widget.scss
@@ -100,6 +100,7 @@
     .carousel-dot {
       width: 12px;
       height: 12px;
+      box-sizing: content-box;
       padding: 0;
       background: #e7e7e7;
       background-clip: content-box;
